H2o/h2o-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: h2o-service
spec:
  selector:
    app: h2o-k8s
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 54321
