H2o/h2o-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: h2o-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: h2o-service
            port:
              number: 54321
  defaultBackend:
    service:
      name: h2o-service
      port:
        number: 54321
